2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.c: (_gnet_idle_add_full), (_gnet_timeout_add_full),
	  (_gnet_io_watch_add_full), (_gnet_source_remove):
	* src/gnet-private.h:
	  Add private _gnet_source_remove() to remove a source by id from a
	  certain main context. Also accept NULL as context for the other
	  functions in place of the default main context.

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* doc/gnet-sections.txt:
	* src/conn.c: (gnet_conn_new_socket), (gnet_conn_set_main_context),
	  (gnet_conn_connect):
	* src/conn.h:
	  API: add gnet_conn_set_main_context()

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/tcp.c: (gnet_tcp_socket_connect),
	  (gnet_tcp_socket_connect_async_full),
	  (gnet_tcp_socket_connect_async),
	  (gnet_tcp_socket_connect_inetaddr_cb),
	  (gnet_tcp_socket_connect_tcp_cb),
	  (gnet_tcp_socket_connect_async_cancel):
	* src/tcp.h: (GTcpSocketConnectAsyncFunc):
	  API: add gnet_tcp_socket_connect_async_full().

2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/socks-private.h:
	* src/socks-private.c: (_gnet_socks_tcp_socket_new), (SocksAsyncData),
	  (socks_async_cb), (_gnet_socks_tcp_socket_new_async_full),
	  (_gnet_socks_tcp_socket_new_async):
	  Add _gnet_socks_tcp_socket_new_async_full() variant that takes a
	  caller-specified GMainContext.

	* doc/gnet-sections.txt:
	* src/tcp.h: (GTcpSocketNewAsyncFunc):
	* src/tcp.c: (gnet_tcp_socket_new_direct),
	  (gnet_tcp_socket_new_async_full), (gnet_tcp_socket_new_async),
	  (gnet_tcp_socket_new_async_direct_full),
	  (gnet_tcp_socket_new_async_direct), (gnet_tcp_socket_new_async_cb),
	  (gnet_tcp_socket_new_async_cancel):
	  API: add gnet_tcp_socket_new_async_direct_full()
	  API: add gnet_tcp_socket_new_direct_full()
	  Add _full() variants that take a caller-specified GMainContext.

2007-11-03  Tim-Philipp Müller  <tim at centricular dot net>
